# gpu-grass-cpp

./: .gitignore  CMakeLists.txt  README.md
assets/: demo_settings.json
shaders/: grass.frag  grass.vert  ground.frag  ground.vert  marker.frag  marker.vert  present.frag  present.vert
src/: app.cpp  app.h  camera.cpp  camera.h  demo_types.h  grass_field.cpp  grass_field.h  main.cpp  math_types.h  settings_io.cpp  settings_io.h  text_overlay.cpp  text_overlay.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_renderer.cpp  vulkan_renderer.h
